# Sheridan

PROG50016/MyFirstProject/: .gitignore
PROG50016/MyFirstProject/MyFirstProject/: MyFirstProject.cpp  MyFirstProject.vcxproj  MyFirstProject.vcxproj.filters  Source.cpp
PROG50102/platformer/: icon.svg.import  project.godot
PROG50102/platformer/prefabs/: character_body_2d.tscn
PROG50102/platformer/scenes/: world.tscn
PROG50102/platformer/scripts/: player.gd.uid
PROG50102/platformer/sprites/: PLACEHOLDER_hornet.png.import  placeholdy.jpg.import
PROG54310/MyFirstProject/: CMakeLists.txt  MyFirstProject.sln
PROG54310/MyFirstProject/MyFirstProject/: MyFirstProject.cpp  Source.cpp
PROG54310/OpenGL/: CMakeLists.txt  OpenGL.sln
PROG54310/OpenGL/OpenGL/: OpenGL.vcxproj  main.cpp
PROG54310/Vectors/: CMakeLists.txt  Vectors.sln
PROG54310/Vectors/Vectors/: Matrix.cpp  Matrix.h  Vectors.cpp  Vectors.vcxproj  Vectors.vcxproj.filters  obj.cpp
